fixed navbar display on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@
 }
 body{
     background-image: url('./old-comics.jpg');
+    height:100%;
 
 }
 
@@ -19,12 +20,16 @@ header {
     background-color: darkslategrey;
     font-size: larger;   
 }
-header a{
-    color:aliceblue
+header a {
+    color:aliceblue;
+    word-break:break-all;
+    display:block;
+    margin: 15px;
 }
 
 main {
-    height: 100;
+    max-height: 100%;
+    min-height: 100vh;
     width:70vw;
     margin:0 auto;
     border:solid black 2px;
@@ -37,10 +42,10 @@ footer{
     display: flex;
     justify-content: center;
     width: 100vw;
-    position: relative;
-    bottom:0;
+    position: absolute;
+    bottom:0 auto;
 }
-button{
+.button{
     width: fit-content;
     background-color: darkslateblue;
     color:aliceblue;
@@ -64,6 +69,12 @@ button{
     text-align: center;
     background-color: darkslateblue;
     color:aliceblue;
+}
+#logout{
+    background-color: darkslateblue;
+    color:aliceblue;
+    padding:2px;
+    border-radius: 5px;
 }
 #upload_widget{
     margin-top:5px;
@@ -217,9 +228,9 @@ margin-top: 10px;
     background-color: darkslategray;
     border-radius: 15px;
     padding:18px;
-    min-width: fit-content;
     max-width: fit-content;
-    margin-left:23vw;
+    min-width: fit-content;
+    margin:0 auto;
     margin-top: 35px;
 }
 #post-title{
@@ -259,10 +270,7 @@ margin-top: 10px;
 .hide{
     display:none
 }
-#psot-image{
-    width:50px;
-    height:50px;
-}
+
 @media  screen and (max-width:1430px) {
     #justice{
         width:500px;
@@ -295,5 +303,11 @@ margin-top: 10px;
     }
     #pubs #chars #series-list #vols-box{
         margin-left: 15vw;
+    }
+    #post-form{
+        width: 200px;
+    }
+    #post-title #new-post #post-button #upload_widget{
+        margin:0 auto;
     }
 }
